--- a/src/TabletDriverCleanup/TabletDriverCleanup.csproj
+++ b/src/TabletDriverCleanup/TabletDriverCleanup.csproj
@@ -2,13 +2,22 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Platforms>x64</Platforms>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PnpUtil\PnpUtil.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Vanara.PInvoke.CfgMgr32" Version="3.4.13" />
+    <PackageReference Include="Vanara.PInvoke.NewDev" Version="3.4.13" />
+    <PackageReference Include="Vanara.PInvoke.SetupAPI" Version="3.4.13" />
   </ItemGroup>
 
 </Project>
