--- a/src/TabletDriverCleanup/TabletDriverCleanup.csproj
+++ b/src/TabletDriverCleanup/TabletDriverCleanup.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <TrimmerRootDescriptor Include="Roots.xml" />
     <ProjectReference Include="..\PnpUtil\PnpUtil.csproj" />
   </ItemGroup>
 
