--- a/src/TabletDriverCleanup/TabletDriverCleanup.csproj
+++ b/src/TabletDriverCleanup/TabletDriverCleanup.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <EmbeddedResource Include="../../config/**" />
+    <PackageReference Include="System.Management" Version="7.0.0" />
     <PackageReference Include="Vanara.PInvoke.CfgMgr32" Version="3.4.13" />
     <PackageReference Include="Vanara.PInvoke.NewDev" Version="3.4.13" />
     <PackageReference Include="Vanara.PInvoke.SetupAPI" Version="3.4.13" />
