Fix CI build path inclusion

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
       - main
   pull_request:
     paths:
-      - src/TabletDriverCleanup
+      - src/TabletDriverCleanup/**
 
 jobs:
   windowsbuild:
