--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ wmi = "0.12"
 log = "0.4.17"
 error-stack = "0.3.1"
 thiserror = "1.0.39"
+simplelog = "0.12.1"
 
 [dependencies.windows]
 version = "0.44"
